--- a/css/CCVC.css
+++ b/css/CCVC.css
@@ -330,6 +330,22 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
 	nav.navbar .navbar-nav {
 		display: none !important; 
 	}
+
+	.product-title {
+		font-size: 80%;
+	}
+
+	.product-description {
+		font-size: 80%;
+	}
+
+	.price {
+		font-size: 80%;
+	}
+
+	#product-sections.shifted .product-grid .product-card p {
+		font-size: 60% !important; 
+	}
 	
 
 	nav.navbar .navbar-nav.active {
@@ -399,14 +415,15 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+	max-width: 100%;
 	
-    padding: 40px 20px;
+    padding: 5% 4%;
     transition: justify-content 0.4s ease, padding-right 0.4s ease;
 }
 
 #product-sections.shifted {
     justify-content: flex-start;
-    padding-left: 50px;
+    padding-left: 5%;
 }
 
 .product-grid {
@@ -415,12 +432,15 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
     flex-wrap: wrap; /* Allow wrapping to multiple rows */
 	padding-top: 5%;
     gap: 20px;
-    max-width: 80%; /* Control maximum width before wrapping */
     transition: transform 0.4s ease;
 }
 
 #product-sections.shifted .product-grid {
     max-width: 60%; /* Narrower when shifted, causing earlier wrapping */
+}
+
+#product-sections.shifted .product-grid .product-card p {
+    font-size: 80%; 
 }
 
 .product-card {
@@ -431,7 +451,6 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
-    padding: 20px;
     width: 22%;
     cursor: pointer;
     flex-shrink: 0; /* Prevent cards from shrinking */
@@ -499,7 +518,9 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
     transition: right 0.4s ease;
     z-index: 1000;
     overflow-y: auto;
-    padding: 40px 30px;
+	
+    padding: 0px 5%;
+	padding-top: 80px;
 }
 
 .product-detail-panel.open {
@@ -508,8 +529,8 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
 
 .close-btn {
     position: absolute;
-    top: 120px;
-    right: 20px;
+    top: 90;
+    right: 3%;
     background: none;
     border: none;
     font-size: 28px;
@@ -529,12 +550,10 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
 }
 
 .detail-image {
-	padding-top: 100px;
-	padding-left: 120px;
-    width: 70%;
+	margin: auto;
+    width: 100%;
     height: auto;
     border-radius: 8px;
-    margin-bottom: 20px;
 }
 
 .detail-title {
