--- a/css/CCVC.css
+++ b/css/CCVC.css
@@ -323,6 +323,10 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
 		color: #333;
 	}
 
+	nav.navbar .navbar-nav.active li {
+		width: 100%;
+	}
+
 	nav.navbar .navbar-nav.active > li > a:not(.btn) {
 		color: #000000;
 	}
@@ -419,7 +423,7 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
     min-height: 100vh;
 	max-width: 100%;
 	
-    padding: 0 4%;
+    padding: 0 8%;
 	padding-top: 95px;
 	padding-bottom: 3%;
     transition: justify-content 0.4s ease, padding-right 0.4s ease;
@@ -498,23 +502,6 @@ body.other nav.navbar .navbar-nav > li > a:not(.btn) {
 	margin: 0;
 	margin-left: 5%;
 	margin-right: 5%;
-}
-
-.request-merch {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #FF8C00;
-    color: white;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    pointer-events: none;
-}
-
-.request-merch:hover {
-    background-color: #e67e00;
 }
 
 /* Product Detail Panel */
@@ -1454,7 +1441,8 @@ footer .social-footer li:hover a {
 
 .modal-popup {
 	position: relative;
-	padding: 45px 30px;
+	padding: 15px 30px;
+	max-height: 100vh;
 	text-align: center;
 	background: url('../img/popup.jpg');
 	box-shadow: none;
@@ -1472,7 +1460,7 @@ footer .social-footer li:hover a {
 .popup-form {
 	width: 90%;
 	max-width: 375px;
-	margin: 60px auto;
+	margin: auto;
 }
 
 .popup-form .form-control {
@@ -1486,7 +1474,6 @@ footer .social-footer li:hover a {
 .popup-form .form-control.dropdown:after {
 	content: '\f0d7';
 	font-family: 'FontAwesome';
-	display: inline-block;
 	float: right;
 	color: white;
 }
@@ -1502,19 +1489,35 @@ footer .social-footer li:hover a {
 	box-shadow: none;
 }
 
+.popup-form .dropdown.open .dropdown-menu{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+	border:2px solid #727272;
+}
+
 .popup-form .dropdown .dropdown-menu li {
-	font-size: 16px;
+	font-size: 25px;
 	width: 100%;
 	background: transparent;
 }
 
 .popup-form .dropdown .dropdown-menu li a {
 	width: 100%;
-	padding: 15px 30px;
+	padding: 0;
+	padding-top: 10%;
+	padding-bottom: 10%;
+	text-align: center;
 	color: #00a8ff;
 }
 
 .popup-form .dropdown .dropdown-menu li:hover a {
+	color: #fff;
+	background: #00a8ff;
+}
+
+.popup-form .dropdown .dropdown-menu li:active a,
+.popup-form .dropdown .dropdown-menu li.active a {
 	color: #fff;
 	background: #00a8ff;
 }
@@ -1586,7 +1589,7 @@ footer .social-footer li:hover a {
 
 .btn.btn-submit {
 	width: 100%;
-	margin-top: 30px;
+	margin-top: 10px;
 	color: #00a8ff;
 	border: 2px solid #fff;
 	background: #fff;
@@ -1759,7 +1762,7 @@ footer .social-footer li:hover a {
 	}
 	.popup-form {
 		width: 100%;
-		margin: 60px auto;
+		margin: auto;
 	}
 	.modal {
 		padding: 0 10px !important;
